lamassu: configure dev-friendly default base URL
lamassu equivalent of f87f6ce.
also remotely related: 57b9fca

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ LAMASSU_IMAGE=entur/lamassu:latest
 LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 LAMASSU_ADMIN_PASSWORD=secret
-LAMASSU_BASE_URL=http://lamassu:8080
+LAMASSU_BASE_URL=http://localhost:8080/sharing
 # Authentication URLs for providers requiring OAuth2 authentication
 LAMASSU_BOLT_AUTH_URL=https://mds.bolt.eu/oauth2/token
 
