mount global.xml explicitly
needed as geoserver writes it from memory to disk on config reload

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -236,6 +236,8 @@ services:
       - ./var/geoserver/logs/:/var/geoserver/logs/
       - ./var/geoserver/gwc_cache_dir/:/var/geoserver/gwc_cache_dir/
       - ./etc/geoserver/:/var/geoserver/datadir_template/
+      # global.xml is written by geoserver before config reload, so we need to have it mounted already at start
+      - ./etc/geoserver/global.xml:/var/geoserver/datadir/global.xml
       - ./bin/geoserver/geoserver-rest-config.sh:/usr/local/bin/geoserver-rest-config.sh
       - ./bin/geoserver/geoserver-rest-reload.sh:/usr/local/bin/geoserver-rest-reload.sh
     labels:
