--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,9 +63,13 @@ services:
     networks: [ipl]
     image: traefik:v2.10
     ports:
+      # todo: change to 80:80
       - "8080:80"
+      # # todo: change to 443:443
+      # - "8443:443"
+      # todo: change to 8080:8080
       # web UI, Prometheus, etc.
-      - "127.0.0.1:8081:8080"
+      - "8081:8080"
     volumes:
       - ./etc/traefik:/etc/traefik
       - ./var/log/traefik:/var/log/traefik
