--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -7,7 +7,7 @@ management.endpoint.health.group.readiness.include=readinessState
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=info,health,prometheus,admin
 management.health.redis.enabled=true
-
+management.health.readinessState.enabled=true
 # Logging
 logging.level.no.entur.lamassu=DEBUG
 
