add goaccess service that ingests Traefik access logs
Co-Authored-By: Jannis R <mail@jannisr.de>

--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 # (I'm not aware of a predefined docker compose var which would make this unnecessary)
 IPL_ROOT_DIR=/srv/docker-unmanaged/ipl/
 
+DOCKER_LOCAL_USER=1000:1000
+
 TRANSFORMER_PROXY_IMAGE=ghcr.io/mobidata-bw/ipl-proxy:latest
 TRANSFORMER_PROXY_PORT=8400
 
@@ -101,5 +103,10 @@ PARK_API_CELERY_BROKER_URL=amqp://park-api-rabbitmq
 PARK_API_IMAGE=ghcr.io/mobidata-bw/park-api-v3:latest
 PARK_API_DB_IMAGE=postgis/postgis:15-3.4-alpine
 
-# Caddy 
+# Caddy
 CADDY_IMAGE=caddy:2.7.5-alpine
+
+# GoAccess
+GOACCESS_IMAGE=allinurl/goaccess:1.8.1
+GOACCESS_NGINX_IMAGE=nginx:1.25.3
+GOACCESS_PORT=8082
