--- a/etc/traefik/traefik.yml
+++ b/etc/traefik/traefik.yml
@@ -66,7 +66,7 @@ entryPoints:
   traefik:
     address: ":8080"
 
-accesslog:
+accessLog:
   filePath: "/var/log/traefik/access.log"
   format: json
   # increase logging performance, risk loss of in-memory logs
