add gtfs-import via dagster

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# IPL root dir to mount volumes using absolute paths. 
+# (I'm not aware of a predefined docker compose var which would make this unnecessary)
+IPL_ROOT_DIR=/srv/docker-unmanaged/ipl/
+
 TRANSFORMER_PROXY_IMAGE=ghcr.io/mobidata-bw/ipl-proxy:latest
 TRANSFORMER_PROXY_PORT=8400
 
@@ -38,10 +42,16 @@ DAGSTER_POSTGRES_DB=postgres_db
 
 # gtfs-db variables
 IPL_GTFS_DB_IMAGE=ghcr.io/mobidata-bw/postgis-with-pg-plan-filter
+IPL_GTFS_DB_POSTGRES_HOST=gtfs-db
 IPL_GTFS_DB_POSTGRES_USER=postgres
-IPL_GTFS_DB_POSTGRES_PASSWORD=password
 IPL_GTFS_DB_POSTGRES_DB=gtfs_importer
 IPL_GTFS_DB_POSTGRES_DB_PREFIX=gtfs
+
+# gtfs-importer variables
+IPL_GTFS_IMPORTER_IMAGE=ghcr.io/mobidata-bw/postgis-gtfs-importer:2023-12-07t21.27.38-2492186
+GTFS_DOWNLOAD_URL=https://www.nvbw.de/fileadmin/user_upload/service/open_data/fahrplandaten_mit_liniennetz/bwgesamt.zip
+GTFS_DOWNLOAD_USER_AGENT=MobiData-BW
+
 # `postgrest` role used by the gtfs-api service (PostgREST)
 IPL_GTFS_DB_POSTGREST_USER=postgrest
 IPL_GTFS_DB_POSTGREST_PASSWORD=password
