--- a/.env.local.example
+++ b/.env.local.example
@@ -25,6 +25,7 @@ PGBOUNCER_POSTGRES_PASSWORD=XP1EdA6S0BHmybkC
 
 # Base URL of gtfs-api, as seen from the browser/client. Usually the Docker host's DNS name or IP address.
 IPL_GTFS_API_PUBLIC_BASE_URL=https://dev-ipl.mobidata-bw.de/gtfs
+IPL_GTFS_DB_POSTGRES_PASSWORD=password
 
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs in order to prevent escaping issues (eg: 32 chars alphanumeric).
