--- a/.env
+++ b/.env
@@ -49,8 +49,12 @@ IPL_GTFS_DB_POSTGRES_DB_PREFIX=gtfs
 
 # gtfs-importer variables
 IPL_GTFS_IMPORTER_IMAGE=ghcr.io/mobidata-bw/postgis-gtfs-importer:2023-12-07t21.27.38-2492186
-GTFS_DOWNLOAD_URL=https://www.nvbw.de/fileadmin/user_upload/service/open_data/fahrplandaten_mit_liniennetz/bwgesamt.zip
-GTFS_DOWNLOAD_USER_AGENT=MobiData-BW
+IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_URL=https://www.nvbw.de/fileadmin/user_upload/service/open_data/fahrplandaten_mit_liniennetz/bwgesamt.zip
+IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_USER_AGENT=MobiData-BW
+# This assumes, that the ipl platform is started in a directory `ipl` which's name becomes
+# the docker project name and is prefixed to the `ipl` network defined in docker-compose. 
+# This var need's to be redefined in e.g. `.env.local` if run from a different dir.
+IPL_GTFS_IMPORTER_NETWORK=ipl_ipl
 
 # `postgrest` role used by the gtfs-api service (PostgREST)
 IPL_GTFS_DB_POSTGREST_USER=postgrest
