--- a/etc/goaccess.conf
+++ b/etc/goaccess.conf
@@ -18,7 +18,7 @@ json-pretty-print true
 no-color false
 no-column-names false
 no-csv-summary false
-no-progress false
+no-progress true
 no-tab-scroll false
 with-mouse false
 
