fix: goaccess: configure time zone

--- a/.env
+++ b/.env
@@ -4,6 +4,11 @@ IPL_ROOT_DIR=/srv/docker-unmanaged/ipl/
 
 DOCKER_LOCAL_USER=1000:1000
 
+# time zone, must be a valid IANA tz database identifier
+# https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+# https://en.wikipedia.org/wiki/Tz_database
+TZ=Europe/Berlin
+
 TRANSFORMER_PROXY_IMAGE=ghcr.io/mobidata-bw/ipl-proxy:latest
 TRANSFORMER_PROXY_PORT=8400
 
