--- a/etc/goaccess.conf
+++ b/etc/goaccess.conf
@@ -5,7 +5,7 @@
 time-format %H:%M:%S
 date-format %Y-%m-%d
 datetime-format %d/%b/%Y:%H:%M:%S %z
-log-format {"ClientAddr":"%h:%^","DownstreamContentSize":"%b","DownstreamStatus":"%s","Duration":"%n","RequestMethod":"%m","RequestPath":"%U","RequestProtocol":"%H","ServiceName":"%v@docker","StartUTC":"%dT%t.%^","request_User-Agent":"%u"}
+log-format {"DownstreamContentSize":"%b","DownstreamStatus":"%s","Duration":"%n","RequestMethod":"%m","RequestPath":"%U","RequestProtocol":"%H","ServiceName":"%v@docker","StartUTC":"%dT%t.%^","request_User-Agent":"%u","request_X-Real-Ip":"%h"}
 db-path /srv/goaccess/data
 
 ######################################
