fix: let Traefik log request times in local time zone, adapt GoAccess ingestion

--- a/etc/goaccess.conf
+++ b/etc/goaccess.conf
@@ -2,10 +2,13 @@
 # Basic Config
 ######################################
 
-time-format %H:%M:%S
-date-format %Y-%m-%d
-datetime-format %d/%b/%Y:%H:%M:%S %z
-log-format {"DownstreamContentSize":"%b","DownstreamStatus":"%s","Duration":"%n","RequestMethod":"%m","RequestPath":"%U","RequestProtocol":"%H","ServiceName":"%v@docker","StartUTC":"%dT%t.%^","request_User-Agent":"%u","request_X-Real-Ip":"%h"}
+# todo: handle time zone offsets using `datetime-format` directive
+# Currently, we assume that time expressed 
+# Note: Both StartLocal & StartUTC contain ISO 8601 fractional seconds (nanoseconds), which seem to be incompatible with GoAccess.
+# e.g. `datetime-format %Y-%m-%dT%H:%M:%S.%f%z`
+# We could also filter out the fractional digits before: `jq '.StartUTC |= sub("(?<x>[^.]+).[0-9]+Z"; "\(.x)Z")'`.
+# [1] https://github.com/allinurl/goaccess/issues/2268
+log-format {"DownstreamContentSize":"%b","DownstreamStatus":"%s","Duration":"%n","RequestMethod":"%m","RequestPath":"%U","RequestProtocol":"%H","ServiceName":"%v@docker","StartLocal":"%dT%t.%^","request_User-Agent":"%u","request_X-Real-Ip":"%h"}
 db-path /srv/goaccess/data
 
 ######################################
