--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,8 @@ services:
       # todo: change to 8080:8080
       # web UI, Prometheus, etc.
       - "8081:8080"
+    environment:
+      TZ: ${TZ:?'missing/empty $TZ'}
     volumes:
       - ./etc/traefik:/etc/traefik
       - ./var/log/traefik:/var/log/traefik
