chore: goaccess: put todos

--- a/etc/goaccess.conf
+++ b/etc/goaccess.conf
@@ -1,3 +1,7 @@
+# todo: --geoip-database?
+# todo: --anonymize-ip?
+# todo: --exclude-ip 10.70.0.0-10.70.255.255?
+
 ######################################
 # Basic Config
 ######################################
