chore: rename "gtfs-swagger-ui" service to "gtfs-api-docs"

--- a/.env
+++ b/.env
@@ -73,8 +73,8 @@ IPL_GTFS_API_PUBLIC_BASE_URL=http://localhost:8080/gtfs
 # We expect those people who want to mass-analyse GTFS data to just download the entire GTFS dataset.
 IPL_GTFS_API_MAX_ROWS=10000
 
-# gtfs-swagger-ui variables
-IPL_GTFS_SWAGGER_UI_PORT=4001
+# gtfs-api-docs variables
+IPL_GTFS_API_DOCS_PORT=4001
 
 # Geoserver variables
 GEOSERVER_PROXY_BASE_URL=http://localhost:8600/geoserver
