chore: gtfs-api-docs: Swagger UI -> Stoplight Elements

--- a/.env.local.example
+++ b/.env.local.example
@@ -34,6 +34,10 @@ IPL_GTFS_API_PUBLIC_BASE_URL=https://dev-ipl.mobidata-bw.de/gtfs
 IPL_GTFS_DB_POSTGRES_PASSWORD=password
 IPL_GTFS_DB_POSTGREST_PASSWORD=password
 
+# gtfs-api-docs variables
+IPL_GTFS_API_DOCS_PUBLIC_HOST=api.mobidata-bw.de
+IPL_GTFS_API_DOCS_PUBLIC_PORT=443
+
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs in order to prevent escaping issues (eg: 32 chars alphanumeric).
 DAGSTER_POSTGRES_PASSWORD=secret
