--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -45,8 +45,8 @@ org.entur.lamassu.targetGbfsVersion=2.3
 ## Base URL for API (needed for URL transformations)
 org.entur.lamassu.baseUrl=${LAMASSU_BASE_URL}
 
-## Host / IP of internal load balancer for internal endpoints (Entur)
-org.entur.lamassu.internalLoadBalancer=http://localhost:8080
+## Host / IP of internal load balancer for internal endpoints (as seen from docker-compose containers)
+org.entur.lamassu.internalLoadBalancer=http://lamassu:8080
 
 org.entur.lamassu.serializationVersion=1
 
