fix: remove passwords from .env file
defaults should go to .env.local.example

--- a/.env.local.example
+++ b/.env.local.example
@@ -26,10 +26,15 @@ PGBOUNCER_POSTGRES_PASSWORD=XP1EdA6S0BHmybkC
 # Base URL of gtfs-api, as seen from the browser/client. Usually the Docker host's DNS name or IP address.
 IPL_GTFS_API_PUBLIC_BASE_URL=https://dev-ipl.mobidata-bw.de/gtfs
 IPL_GTFS_DB_POSTGRES_PASSWORD=password
+IPL_GTFS_DB_POSTGREST_PASSWORD=password
 
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs in order to prevent escaping issues (eg: 32 chars alphanumeric).
 DAGSTER_POSTGRES_PASSWORD=boapaLEspBg6qhY8
+
+# Password for ipl-db, which is the generic database for datasets intended for wms/wfs publication, in case no
+# application specific database is used
+IPL_POSTGRES_PASSWORD=password
 
 # Public Geoserver URL
 GEOSERVER_PROXY_BASE_URL=https://dev-ipl.mobidata-bw.de/geoserver
