chore: extract x2gbfs env vars

--- a/.env
+++ b/.env
@@ -5,7 +5,6 @@ IPL_ROOT_DIR=/srv/docker-unmanaged/ipl/
 TRANSFORMER_PROXY_IMAGE=ghcr.io/mobidata-bw/ipl-proxy:latest
 TRANSFORMER_PROXY_PORT=8400
 
-# TODO fix image name after repository has been choosen and CI is set up
 LAMASSU_IMAGE=entur/lamassu:latest
 LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
@@ -24,8 +23,10 @@ IPL_POSTGRES_USER=geoserver
 
 # x2gbfs variables
 X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:latest
+X2GBFS_PROVIDERS=deer,voi-raumobil,lastenvelo_fr
+X2GBFS_UPDATE_INTERVAL_SECONDS=60
+
 DEER_API_URL=https://deer.fleetster.de
-DEER_USER=api_user@nvbw.de
 VOI_API_URL=https://lsd.raumobil.net/Broker/grid?platform=mobidata-bw&source=voi&type=eScooter&hashes=u0ty,u0tz
 
 # dagster variables
