--- a/.env.local.example
+++ b/.env.local.example
@@ -14,11 +14,11 @@ LAMASSU_BOLT_CLIENT_PASSWORD=<fill in password>
 
 # x2gbfs Credentials
 # User and password from Deer
-DEER_USER=
-DEER_PASSWORD=
+DEER_USER=user
+DEER_PASSWORD=password
 # User and password from VOI/Raumobil
-VOI_USER=
-VOI_PASSWORD=
+VOI_USER=user
+VOI_PASSWORD=password
 
 # A random password for pgbouncer clients (gtfs-api, geoserver, dagster, etc.)
 PGBOUNCER_POSTGRES_PASSWORD=XP1EdA6S0BHmybkC
