--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,6 @@
 # UID and GID of the user which should be used to run most services in common uid:gid format. Often something like 1000:1000
 # You can determine your this line with your own uid and gid by `echo "DOCKER_LOCAL_USER=$(shell id -u):$(shell id -g)"`
-
+DOCKER_LOCAL_USER=1000:1000
 
 # A random password for the lamassu admin user. Should be long and should not contain special signs.
 LAMASSU_ADMIN_PASSWORD=secret
@@ -13,7 +13,6 @@ LAMASSU_DB_CONNECT_CLIENT_ID=client
 LAMASSU_DB_CONNECT_API_KEY=secret
 
 # Credentials for BOLT API.
-LAMASSU_BOLT_API_URL=http://url.org
 LAMASSU_BOLT_CLIENT_ID=client
 LAMASSU_BOLT_CLIENT_PASSWORD=secret
 
